--- a/src/main/resources/comment.fxml
+++ b/src/main/resources/comment.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.*?>
 
 <VBox fx:controller="com.yd.controller.PostController"
-      xmlns:fx="http://javafx.com/fxml" spacing="10" padding="10">
+      xmlns:fx="http://javafx.com/fxml" spacing="10">
     <Label fx:id="postLabel" wrapText="true"/>
     <ListView fx:id="commentListView" prefHeight="200"/>
     <HBox spacing="10">
-        <TextField fx:id="commentField" promptText="Add a comment..." HBox.hgrow="ALWAYS"/>
-        <Button fx:id="addCommentButton" text="Add" onAction="#handleAddComment"/>
+        <TextField fx:id="commentField" promptText="댓글 작성하기" HBox.hgrow="ALWAYS"/>
+        <Button fx:id="addCommentButton" text="추가" onAction="#handleAddComment"/>
     </HBox>
 </VBox>
