--- a/src/main/resources/mypage.fxml
+++ b/src/main/resources/mypage.fxml
@@ -46,7 +46,7 @@
             <padding>
                 <Insets top="10" right="10" bottom="10" left="10"/> <!-- 안쪽 여백 설정 -->
             </padding>
-            <ImageView fitWidth="100" fitHeight="100">
+            <ImageView fx:id="centralProfileImageView" fitWidth="100" fitHeight="100">
                 <image>
                     <Image url="@/images/default_profile.png"/>
                 </image>
@@ -72,7 +72,7 @@
         <VBox spacing="10" alignment="CENTER">
             <HBox spacing="1" alignment="CENTER">
                 <Button text="업데이트" onAction="#handleUpdate" prefWidth="200"/>
-                <Button text="메인 페이지로" onAction="#goToMainPage" prefWidth="200"/>
+                <Button text="메인 페이지로" onAction="#goToMainPageButton" prefWidth="200"/>
                 <Button text="로그아웃" onAction="#handleLogout" prefWidth="200"/>
             </HBox>
             <Label fx:id="messageLabel"/>
