--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -3,7 +3,6 @@
 /* 전체 배경과 폰트 설정 */
 .root {
     -fx-background-color: #FFFFFF;
-    -fx-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* 내비게이션 바 스타일 */
@@ -49,6 +48,33 @@
     -fx-font-size: 14px;
 }
 
+.text-field-small {
+    -fx-pref-width: 330px;
+    -fx-pref-height: 40px;
+    -fx-font-size: 14px;
+}
+
+.password-field-small {
+    -fx-pref-width: 330px;
+    -fx-pref-height: 40px;
+    -fx-font-size: 14px;
+}
+
+.login-primary-button {
+    -fx-font-weight: bold;
+    -fx-pref-width: 330px;
+    -fx-pref-height: 40px;
+    -fx-background-radius: 5;
+}
+
+.login-secondary-button {
+    -fx-border-width: 1;
+    -fx-font-weight: bold;
+    -fx-pref-width: 330px;
+    -fx-pref-height: 40px;
+    -fx-background-radius: 5;
+}
+
 /* 레이블 스타일 */
 .label {
     -fx-font-size: 14px;
@@ -78,4 +104,37 @@
 .image-view {
     -fx-fit-width: 24px;
     -fx-fit-height: 24px;
+}
+
+.stat-title {
+    -fx-font-size: 14px;
+    -fx-text-fill: #657786; /* 회색 계열 색상 */
+}
+
+.stat-count {
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #14171a; /* 진한 색상 */
+}
+
+/* 포스트 셀 */
+.post-cell {
+    -fx-border-color: #e1e8ed;
+    -fx-border-width: 0 0 1 0;
+    -fx-padding: 10;
+}
+
+.post-cell:hover {
+    -fx-background-color: #f5f8fa;
+}
+
+/* 댓글 셀 */
+.comment-cell {
+    -fx-background-color: #f0f0f0;
+    -fx-border-color: #dcdcdc;
+    -fx-border-width: 0 0 1 0;
+}
+
+.comment-cell:hover {
+    -fx-background-color: #e8e8e8;
 }
